--- a/templates/.github/workflows/canary-release.yaml.hbs
+++ b/templates/.github/workflows/canary-release.yaml.hbs
@@ -30,7 +30,7 @@ jobs:
 
       - run: docker build --build-arg NPM_TOKEN=$\{{ env.NPM_TOKEN }} . -t $\{{ env.IMAGE_NAME }}
         env:
-          NPM_TOKEN: $\{{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: $\{{ secrets.GH_NPM_TOKEN }}
 
       - run: docker push $\{{ env.IMAGE_NAME }}
       - run: gcloud run deploy $\{{ env.SERVICE_NAME }}-${{ env.VERSION }} --platform managed --image=$\{{ env.IMAGE_NAME }} --region $\{{ env.REGION }}
