--- a/templates/.github/workflows/canary-release.yaml.hbs
+++ b/templates/.github/workflows/canary-release.yaml.hbs
@@ -35,4 +35,5 @@ jobs:
           NPM_TOKEN: $\{{ secrets.GH_NPM_TOKEN }}
 
       - run: docker push $\{{ env.IMAGE_NAME }}
-      - run: gcloud run deploy $\{{ env.SERVICE_NAME }}-${{ env.VERSION }} --platform managed --image=$\{{ env.IMAGE_NAME }} --region $\{{ env.REGION }}
+
+      - run: gcloud run deploy $\{{ env.SERVICE_NAME }}-$\{{ env.VERSION }} --platform managed --image=$\{{ env.IMAGE_NAME }} --region $\{{ env.REGION }}
