change service name to dev

--- a/templates/.github/workflows/canary-release.yaml.hbs
+++ b/templates/.github/workflows/canary-release.yaml.hbs
@@ -36,4 +36,4 @@ jobs:
 
       - run: docker push $\{{ env.IMAGE_NAME }}
 
-      - run: gcloud run deploy $\{{ env.SERVICE_NAME }}-$\{{ env.VERSION }} --platform managed --image=$\{{ env.IMAGE_NAME }} --region $\{{ env.REGION }}
+      - run: gcloud run deploy $\{{ env.SERVICE_NAME }}-dev-$\{{ env.VERSION }} --platform managed --image=$\{{ env.IMAGE_NAME }} --region $\{{ env.REGION }}
