--- a/templates/.github/workflows/canary-release.yaml.hbs
+++ b/templates/.github/workflows/canary-release.yaml.hbs
@@ -34,7 +34,7 @@ jobs:
         env:
           NPM_TOKEN: $\{{ secrets.GH_NPM_TOKEN }}
 
-      - run: docker tag $\{{ env.IMAGE_NAME }}:v$/{{ env.VERSION }}-dev
+      - run: docker tag $\{{ env.IMAGE_NAME }}:$\{{ env.V_TAG }} $\{{ env.IMAGE_NAME }}:v$\{{ env.VERSION }}-dev
 
       - run: docker push $\{{ env.IMAGE_NAME }}
 
