--- a/templates/.github/workflows/canary-release.yaml.hbs
+++ b/templates/.github/workflows/canary-release.yaml.hbs
@@ -2,8 +2,8 @@ name: Canary Release
 on:
   push:
     branches:
-      - main
-      - master
+      - develop
+      - dev
 
 jobs:
   up:
@@ -11,7 +11,6 @@ jobs:
     runs-on: ubuntu-latest
     env:
       SERVICE_NAME: "{{github.name}}"
-      IMAGE_NAME: eu.gcr.io/indiv-app-dev/{{github.name}}
     steps:
       - uses: actions/checkout@v1
         with:
@@ -20,16 +19,13 @@ jobs:
       - name: nodejs project information
         id: projectinfo
         uses: gregoranders/nodejs-project-info@v0.0.11
-
-      - uses: apexskier/github-semver-parse@v1
-        id: semver
+      
+      - name: Docker meta
+        id: docker_meta
+        uses: crazy-max/ghaction-docker-meta@v1
         with:
-          version: $\{{ steps.projectinfo.outputs.VERSION }}
-
-      - name: Set the version
-        id: version
-        run: echo ::set-output name=VERSION::$\{{ steps.semver.outputs.major }}.$\{{ steps.semver.outputs.minor }}.$\{{ steps.semver.outputs.patch }}-canary.$(git rev-parse --short=4 $\{{ github.sha }})
-        shell: bash
+          images: eu.gcr.io/indiv-app-dev/{{github.name}}
+          tag-custom: v-$\{{ steps.projectinfo.outputs.VERSION }}
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
@@ -49,14 +45,29 @@ jobs:
           project_id: indiv-app-dev
           service_account_key: $\{{ secrets.GCP_SERVICE_ACCOUNT_JSON }}
           export_default_credentials: true
+      
+      - run: gcloud auth configure-docker -q
 
-      - run: gcloud auth configure-docker
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-      - run: docker build --build-arg NPM_TOKEN=$\{{ env.NPM_TOKEN }} . -t $\{{ env.IMAGE_NAME }}:$\{{ steps.version.outputs.VERSION }}
-        env:
-          NPM_TOKEN: $\{{ secrets.GH_NPM_TOKEN }}
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: $\{{ runner.os }}-buildx-$\{{ matrix.service }}-$\{{ github.sha }}
+          restore-keys: |
+            $\{{ runner.os }}-buildx-$\{{ matrix.service }}-
 
-      - run: docker push $\{{ env.IMAGE_NAME }}
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: $\{{ steps.docker_meta.outputs.tags }}
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
+          build-args: |
+            NPM_TOKEN=$\{{ secrets.GH_NPM_TOKEN }}
 
       - name: Request version update
         uses: peter-evans/repository-dispatch@v1
