--- a/templates/.github/workflows/release.yaml.hbs
+++ b/templates/.github/workflows/release.yaml.hbs
@@ -43,10 +43,9 @@ jobs:
         if: steps.semantic.outputs.new_release_published == 'true'
         uses: actions/cache@v2
         with:
-          path: /tmp/.buildx-cache
-          key: $\{{ runner.os }}-buildx-$\{{ matrix.service }}-$\{{ github.sha }}
+          key: $\{{ runner.os }}-buildx-$\{{ github.sha }}
           restore-keys: |
-            $\{{ runner.os }}-buildx-$\{{ matrix.service }}-
+            $\{{ runner.os }}-buildx-
 
       - name: Build and push
         if: steps.semantic.outputs.new_release_published == 'true'
@@ -56,7 +55,6 @@ jobs:
           tags: |
             $\{{ env.IMAGE_NAME }}:v$\{{ steps.semantic.outputs.new_release_version }}
             $\{{ env.IMAGE_NAME }}:v$\{{ steps.semantic.outputs.new_release_major_version }}
-          file: dockerfiles/$\{{ matrix.dockerfile }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
           build-args: |
