--- a/templates/.github/workflows/canary-release.yaml.hbs
+++ b/templates/.github/workflows/canary-release.yaml.hbs
@@ -39,7 +39,7 @@ jobs:
           tag-custom: $\{{ steps.version.outputs.CUSTOM_TAG }}
           tag-sha: true
       
-      - run: echo $\{{ steps.docker_meta.outputs.version }}
+      - run: echo $\{{ steps.version.outputs.CUSTOM_TAG }}
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
